--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DESIRE</title>
+    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="about.html">About</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="gallery.html">Gallery</a>
+              </li>
+            </ul>
+          </nav>
 
-<body>
+          <a class="logo" href="index.html">
+            <img src="images/logo.png" alt="Desire" />
+          </a>
 
-  <header class="header"></header>
-  <div class="wrapper">
-    <main class="main"></main>
-    <footer class="footer"></footer>
-  </div>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href="blog.html">Blog</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </nav>
 
+          <button class="header__btn">
+            <img src="images/icon_menu.svg" alt="menu icon" />
+          </button>
+        </div>
+      </div>
+    </header>
 
+    <div class="wrapper">
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
 
-  <script src="js/main.min.js"></script>
-</body>
-
+    <script src="js/main.min.js"></script>
+  </body>
 </html>
