--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DESIRE</title>
     <link rel="stylesheet" href="css/style.min.css" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
   </head>
 
   <body>
@@ -47,7 +47,70 @@
 
     <div class="wrapper">
       <main class="main"></main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <div class="footer__content">
+          <div class="container">
+            <div class="footer__inner">
+              <div class="footer__info">
+                <h6 class="footer__info-title">Contact Us</h6>
+                <p class="footer__info-text">
+                  Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
+                  schlitz you probably occupy
+                </p>
+                <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+                  ouremailaddress@email.com
+                </a>
+                <form class="footer__form">
+                  <input class="footer__form-input" type="email" name="email" placeholder="Subscribe by email" required />
+                  <button class="footer__form-btn" type="submit">Send</button>
+                </form>
+              </div>
+
+              <ul class="footer__social">
+                <li class="footer__social-item">
+                  <a class="footer__social-link footer__social-link--facebook" href="https://www.facebook.com/">Facebook</a>
+                </li>
+                <li class="footer__social-item">
+                  <a class="footer__social-link footer__social-link--instagram" href="https://www.instagram.com/">Instagram</a>
+                </li>
+                <li class="footer__social-item">
+                  <a class="footer__social-link footer__social-link--pinterest" href="https://www.pinterest.com/">Pinterest</a>
+                </li>
+                <li class="footer__social-item">
+                  <a class="footer__social-link footer__social-link--whatsapp" href="https://www.whatsapp.com/">WhatsApp</a>
+                </li>
+                <li class="footer__social-item">
+                  <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/">Youtube</a>
+                </li>
+              </ul>
+
+              <nav class="footer__menu">
+                <ul class="footer__menu-list">
+                  <li class="footer__menu-item">
+                    <a class="footer__menu-link" href="about.html">About</a>
+                  </li>
+                  <li class="footer__menu-item">
+                    <a class="footer__menu-link" href="gallery.html">Gallery</a>
+                  </li>
+                  <li class="footer__menu-item">
+                    <a class="footer__menu-link" href="blog.html">Blog</a>
+                  </li>
+                  <li class="footer__menu-item">
+                    <a class="footer__menu-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          <div class="container">
+            <p>674 Gonzales Drive. Washington, PA 15301</p>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <script src="js/main.min.js"></script>
