--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
           </nav>
 
           <a class="logo" href="index.html">
-            <img src="images/logo.png" alt="Desire" />
+            <img src="images/logo.png" alt="DESIRE logo" />
           </a>
 
           <nav class="menu">
@@ -41,6 +41,26 @@
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="menu icon" />
           </button>
+
+          <div class="rightside-menu rightside-menu--close">
+            <button class="rightside-menu__close">
+              <img src="images/close.svg" alt="close icon" />
+            </button>
+            <div class="rightside-menu__content">
+              <a class="rightside-menu__logo" href="index.html">
+                <img src="images/logo-big.png" alt="DESIRE logo" />
+              </a>
+              <h4 class="rightside-menu__title">Furniture for life</h4>
+              <p class="rightside-menu__text">
+                Sustainable hot chicken skateboard, dreamcatcher meggings
+                actually squid. Slow-carb everyday carry +1 art party
+                microdosing, put a bird on it brooklyn
+              </p>
+              <a class="rightside-menu__img" href="">
+                <img src="images/rightside-img.jpg" alt="Green leather armchair" />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -58,30 +78,59 @@
                   Keffiyeh poutine etsy, paleo cray put a bird on it microdosing
                   schlitz you probably occupy
                 </p>
-                <a class="footer__info-email" href="mailto:ouremailaddress@email.com">
+                <a
+                  class="footer__info-email"
+                  href="mailto:ouremailaddress@email.com"
+                >
                   ouremailaddress@email.com
                 </a>
                 <form class="footer__form">
-                  <input class="footer__form-input" type="email" name="email" placeholder="Subscribe by email" required />
+                  <input
+                    class="footer__form-input"
+                    type="email"
+                    name="email"
+                    placeholder="Subscribe by email"
+                    required
+                  />
                   <button class="footer__form-btn" type="submit">Send</button>
                 </form>
               </div>
 
               <ul class="footer__social">
                 <li class="footer__social-item">
-                  <a class="footer__social-link footer__social-link--facebook" href="https://www.facebook.com/">Facebook</a>
+                  <a
+                    class="footer__social-link footer__social-link--facebook"
+                    href="https://www.facebook.com/"
+                    >Facebook</a
+                  >
                 </li>
                 <li class="footer__social-item">
-                  <a class="footer__social-link footer__social-link--instagram" href="https://www.instagram.com/">Instagram</a>
+                  <a
+                    class="footer__social-link footer__social-link--instagram"
+                    href="https://www.instagram.com/"
+                    >Instagram</a
+                  >
                 </li>
                 <li class="footer__social-item">
-                  <a class="footer__social-link footer__social-link--pinterest" href="https://www.pinterest.com/">Pinterest</a>
+                  <a
+                    class="footer__social-link footer__social-link--pinterest"
+                    href="https://www.pinterest.com/"
+                    >Pinterest</a
+                  >
                 </li>
                 <li class="footer__social-item">
-                  <a class="footer__social-link footer__social-link--whatsapp" href="https://www.whatsapp.com/">WhatsApp</a>
+                  <a
+                    class="footer__social-link footer__social-link--whatsapp"
+                    href="https://www.whatsapp.com/"
+                    >WhatsApp</a
+                  >
                 </li>
                 <li class="footer__social-item">
-                  <a class="footer__social-link footer__social-link--youtube" href="https://www.youtube.com/">Youtube</a>
+                  <a
+                    class="footer__social-link footer__social-link--youtube"
+                    href="https://www.youtube.com/"
+                    >Youtube</a
+                  >
                 </li>
               </ul>
 
@@ -112,6 +161,8 @@
         </div>
       </footer>
     </div>
+
+    <div class="dark-background"></div>
 
     <script src="js/main.min.js"></script>
   </body>
