Added jQuery and slick-carousel plugin, added top section for homepage, added page.html with default markup, new styles and scripts

--- a/app/page.html
+++ b/app/page.html
@@ -57,7 +57,7 @@
                 microdosing, put a bird on it brooklyn
               </p>
               <a class="rightside-menu__img" href="">
-                <img src="images/content/rightside-img.jpg" alt="Green leather armchair" />
+                <img src="images/rightside-img.jpg" alt="Green leather armchair" />
               </a>
             </div>
           </div>
@@ -66,51 +66,7 @@
     </header>
 
     <div class="wrapper">
-      <main class="main">
-
-        <section class="top">
-          <div class="top__inner">
-            <div class="top__slider">
-
-              <div class="top__slider-item">
-                <img class="top__slider-img" src="images/content/slider-img-01.png" alt="images" >
-                <div class="top__slider-info">
-                  <h2 class="top__slider-title">Furniture collection</h2>
-                  <p class="top__slider-text">
-                    Deep v you probably haven't heard of them banh mi synth 
-                    actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                  </p>
-                </div>
-              </div>
-
-              <div class="top__slider-item">
-                <img class="top__slider-img" src="images/content/slider-img-02.png" alt="images" >
-                <div class="top__slider-info">
-                  <h2 class="top__slider-title">Furniture collection</h2>
-                  <p class="top__slider-text">
-                    Deep v you probably haven't heard of them banh mi synth 
-                    actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                  </p>
-                </div>
-              </div>
-
-              <div class="top__slider-item">
-                <img class="top__slider-img" src="images/content/slider-img-03.png" alt="images" >
-                <div class="top__slider-info">
-                  <h2 class="top__slider-title">Furniture collection</h2>
-                  <p class="top__slider-text">
-                    Deep v you probably haven't heard of them banh mi synth 
-                    actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                  </p>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-        </section>
-
-      </main>
+      <main class="main"></main>
 
       <footer class="footer">
         <div class="footer__content">
