--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,76 @@
           </div>
         </section>
 
+        <section class="new-collection">
+          <div class="container-fluid">
+            <div class="new-collection__inner">
+              <h3 class="new-collection__title">
+                Furniture new collection
+              </h3>
+              <p class="new-collection__text">
+                Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
+              </p>
+              <div class="collection">
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-01.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-02.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-03.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-04.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-05.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
