--- a/app/index.html
+++ b/app/index.html
@@ -180,6 +180,21 @@
           </div>
         </section>
 
+        <section class="decor" style="background: #F4F1EF url(images/decor-bg.jpg) center center">
+          <div class="container">
+            <div class="decor__inner">
+              <h2 class="decor__title">
+                Aesthetic <br>
+                ethical drinking
+              </h2>
+              <p class="decor__text">
+                Deep v you probably haven't heard of them banh mi synth actually 
+                affogato. Artlyft ethical the one drinking vinegar austint
+              </p>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
