--- a/app/index.html
+++ b/app/index.html
@@ -195,6 +195,51 @@
           </div>
         </section>
 
+        <section class="works-path">
+          <div class="container">
+            <div class="works-path__inner">
+              <h3 class="works-path__title">How it works</h3>
+              <div class="works-path__items">
+
+                <div class="works-path__items-box">
+
+                  <div class="works-path__item works-path__item--consultation">
+                    <img class="works-path__item-img" src="images/graphic-tool.svg" alt="graphic tool icon">
+                    <h6 class="works-path__item-title">
+                      Designer Consultation
+                    </h6>
+                    <p class="works-path__item-text">
+                      Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                    </p>
+                  </div>
+                 
+                  <div class="works-path__item works-path__item--production">
+                    <img class="works-path__item-img" src="images/sofa.svg" alt="sofa icon">
+                    <h6 class="works-path__item-title">
+                      Production
+                    </h6>
+                    <p class="works-path__item-text">
+                      Everyday carry actually neutra authentic kogi shabby chic
+                    </p>
+                  </div>
+
+                </div>
+
+                <div class="works-path__line"></div>
+
+                <div class="works-path__item works-path__item--measurements">
+                  <img class="works-path__item-img" src="images/measuring-tape.svg" alt="measuring tape icon">
+                  <h6 class="works-path__item-title">
+                    Measurements
+                  </h6>
+                  <p class="works-path__item-text">
+                    Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
