--- a/app/index.html
+++ b/app/index.html
@@ -243,6 +243,8 @@
 
         <section class="gallery">
           <div class="container-fluid">
+            <h3 class="gallery__title">Gallery</h3>
+
             <div class="gallery__buttons">
               <button class="gallery__btn mixitup-control-active" type="button" data-filter=".bedroom">Bedroom furniture</button>
               <button class="gallery__btn" type="button" data-filter=".living">Living room furniture</button>
@@ -291,6 +293,47 @@
           </div>
         </section>
 
+        <section class="blog-box">
+          <div class="container">
+            <div class="blog-box__inner">
+              <h3 class="blog-box__title">More inspiration ideas <br/> in our blog</h3>
+
+              <div class="blog-box__items">
+                <div class="blog-box__item">
+                  <a class="blog-box__item-link" href="blog-page.html">
+                    <img class="blog-box__item-img" src="images/blog/01.jpg" alt="images">
+                  </a>
+                  <div class="blog-box__links">   
+                    <span class="blog-box__date">March 12, 2020</span> |
+                    <a class="blog-box__author" href="blog-page.html">by Ann Summers</a> | 
+                    <a class="blog-box__theme" href="blog-page.html">Inrerior</a>
+                  </div>
+                  <a class="blog-box__item-link" href="blog-page.html">
+                    <h4 class="blog-box__item-title">
+                      Listicle actually selvage activated charcoal for the drinking vinegar
+                    </h4>
+                  </a>
+                </div>
+                   
+                <div class="blog-box__item">
+                  <a class="blog-box__item-link" href="blog-page.html">
+                    <img class="blog-box__item-img" src="images/blog/02.jpg" alt="images">
+                  </a>
+                  <div class="blog-box__links">
+                    <span class="blog-box__date"> September 28,2020</span> |
+                    <a class="blog-box__author" href="blog-page.html">by Finnagan Morningstar</a> |
+                    <a class="blog-box__theme" href="blog-page.html">Dining room interior</a>
+                  </div>
+                  <a href="blog-page.html">
+                    <h4 class="blog-box__item-title">
+                      Red selfies edison bulb four dollar toast humblebrag
+                    </h4>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
