--- a/app/about.html
+++ b/app/about.html
@@ -66,34 +66,7 @@
     </header>
 
     <div class="wrapper">
-      <main class="main">
-
-        <div class="breadcrumbs">
-          <div class="container">
-            <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="/">Home</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="about.html">About</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="gallery.html">Gallery</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="blog.html">Blog</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="gallery.html">Gallery</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="blog-page.html">Article</a>
-              </li>              
-            </ul>
-          </div>
-        </div>
-
-      </main>
+      <main class="main"></main>
 
       <footer class="footer">
         <div class="footer__content">
