Replaced magnific popup plugin with fancybox, added section.about, popup video, new styles and images

--- a/app/index.html
+++ b/app/index.html
@@ -246,7 +246,7 @@
             <h3 class="gallery__title">Gallery</h3>
 
             <div class="gallery__buttons">
-              <button class="gallery__btn mixitup-control-active" type="button" data-filter=".bedroom">Bedroom furniture</button>
+              <button class="gallery__btn" type="button" data-filter=".bedroom">Bedroom furniture</button>
               <button class="gallery__btn" type="button" data-filter=".living">Living room furniture</button>
               <button class="gallery__btn" type="button" data-filter=".office">Office furniture</button>
               <button class="gallery__btn" type="button" data-filter=".dining">Dining room futniture</button>
@@ -255,39 +255,39 @@
 
             <div class="gallery__inner">
               <div class="gallery__items mix bedroom">
-                <a class="gallery__item" href="images/gallery/01.jpg"><img class="gallery__img" src="images/gallery/01.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/02.jpg"><img class="gallery__img" src="images/gallery/02.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/03.jpg"><img class="gallery__img" src="images/gallery/03.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/04.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/05.jpg"><img class="gallery__img" src="images/gallery/05.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/01.jpg"><img class="gallery__img" src="images/gallery/01.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/02.jpg"><img class="gallery__img" src="images/gallery/02.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/03.jpg"><img class="gallery__img" src="images/gallery/03.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/04.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/05.jpg"><img class="gallery__img" src="images/gallery/05.jpg" alt="images"></a>
               </div>
               <div class="gallery__items mix living">
-                <a class="gallery__item" href="images/gallery/06.jpg"><img class="gallery__img" src="images/gallery/06.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/07.jpg"><img class="gallery__img" src="images/gallery/07.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/08.jpg"><img class="gallery__img" src="images/gallery/08.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/09.jpg"><img class="gallery__img" src="images/gallery/09.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/10.jpg"><img class="gallery__img" src="images/gallery/10.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/06.jpg"><img class="gallery__img" src="images/gallery/06.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/07.jpg"><img class="gallery__img" src="images/gallery/07.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/08.jpg"><img class="gallery__img" src="images/gallery/08.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/09.jpg"><img class="gallery__img" src="images/gallery/09.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/10.jpg"><img class="gallery__img" src="images/gallery/10.jpg" alt="images"></a>
               </div>
               <div class="gallery__items mix office">
-                <a class="gallery__item" href="images/gallery/14.jpg"><img class="gallery__img" src="images/gallery/14.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/11.jpg"><img class="gallery__img" src="images/gallery/11.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/12.jpg"><img class="gallery__img" src="images/gallery/12.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/13.jpg"><img class="gallery__img" src="images/gallery/13.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/15.jpg"><img class="gallery__img" src="images/gallery/15.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/14.jpg"><img class="gallery__img" src="images/gallery/14.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/11.jpg"><img class="gallery__img" src="images/gallery/11.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/12.jpg"><img class="gallery__img" src="images/gallery/12.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/13.jpg"><img class="gallery__img" src="images/gallery/13.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/15.jpg"><img class="gallery__img" src="images/gallery/15.jpg" alt="images"></a>
               </div>
               <div class="gallery__items mix dining">
-                <a class="gallery__item" href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/04.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/01.jpg"><img class="gallery__img" src="images/gallery/01.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/02.jpg"><img class="gallery__img" src="images/gallery/02.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/03.jpg"><img class="gallery__img" src="images/gallery/03.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/05.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/04.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/01.jpg"><img class="gallery__img" src="images/gallery/01.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/02.jpg"><img class="gallery__img" src="images/gallery/02.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/03.jpg"><img class="gallery__img" src="images/gallery/03.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/04.jpg"><img class="gallery__img" src="images/gallery/05.jpg" alt="images"></a>
               </div>
               <div class="gallery__items mix chair">
-                <a class="gallery__item" href="images/gallery/10.jpg"><img class="gallery__img" src="images/gallery/10.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/07.jpg"><img class="gallery__img" src="images/gallery/07.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/06.jpg"><img class="gallery__img" src="images/gallery/06.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/08.jpg"><img class="gallery__img" src="images/gallery/08.jpg" alt="images"></a>
-                <a class="gallery__item" href="images/gallery/09.jpg"><img class="gallery__img" src="images/gallery/09.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/10.jpg"><img class="gallery__img" src="images/gallery/10.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/07.jpg"><img class="gallery__img" src="images/gallery/07.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/06.jpg"><img class="gallery__img" src="images/gallery/06.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/08.jpg"><img class="gallery__img" src="images/gallery/08.jpg" alt="images"></a>
+                <a class="gallery__item" data-fancybox href="images/gallery/09.jpg"><img class="gallery__img" src="images/gallery/09.jpg" alt="images"></a>
               </div>
             </div>
           </div>
