Added section.partners for about.html, new images and styles

--- a/app/about.html
+++ b/app/about.html
@@ -173,6 +173,33 @@
           </div>
         </section>
 
+        <section class="partners">
+          <div class="container-fluid">
+            <div class="partners__inner">
+
+              <h2 class="partners__title">Partners</h2>
+
+              <div class="partners__items">
+                <div class="partners__item">
+                  <img class="partners__img" src="images/partners/01.svg" alt="">
+                </div>
+                <div class="partners__item">
+                  <img class="partners__img" src="images/partners/02.svg" alt="">
+                </div>
+                <div class="partners__item">
+                  <img class="partners__img" src="images/partners/01.svg" alt="">
+                </div>
+                <div class="partners__item">
+                  <img class="partners__img" src="images/partners/02.svg" alt="">
+                </div>
+                <div class="partners__item">
+                  <img class="partners__img" src="images/partners/01.svg" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
