Added section.new-collection for about.html

--- a/app/about.html
+++ b/app/about.html
@@ -176,9 +176,7 @@
         <section class="partners">
           <div class="container-fluid">
             <div class="partners__inner">
-
               <h2 class="partners__title">Partners</h2>
-
               <div class="partners__items">
                 <div class="partners__item">
                   <img class="partners__img" src="images/partners/01.svg" alt="">
@@ -195,6 +193,70 @@
                 <div class="partners__item">
                   <img class="partners__img" src="images/partners/01.svg" alt="">
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="new-collection">
+          <div class="container-fluid">
+            <div class="new-collection__inner">
+              <div class="collection">
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-01.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-02.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-03.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-04.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
+                <a class="collection__item" href="gallery.html">
+                  <img class="collection__img" src="images/content/collection-05.jpg" alt="images" >
+                  <div class="collection__info">
+                    <h6 class="collection__info-title">
+                      Truffaut literally trust
+                    </h6>
+                    <p class="collection__info-text">
+                      Living room furntiture | Chair
+                    </p>
+                  </div>
+                </a>
               </div>
             </div>
           </div>
