--- a/app/about.html
+++ b/app/about.html
@@ -275,7 +275,7 @@
                   schlitz you probably occupy
                 </p>
                 <a
-                  class="footer__info-email"
+                  class="footer__info-email info-email"
                   href="mailto:ouremailaddress@email.com"
                 >
                   ouremailaddress@email.com
