--- a/app/contact.html
+++ b/app/contact.html
@@ -93,6 +93,63 @@
           ></iframe>
         </div>
 
+        <section class="contact">
+          <div class="container">
+            <h3 class="contact__title">
+              Contact Us
+            </h3>
+
+            <div class="contact__content">
+              <ul class="contact__social">
+                <li class="contact__social-item">
+                  <a class="contact__social-link" href="https://www.facebook.com/">
+                    <img class="contact__social-icon" src="images/facebook.svg" alt="facebook icon">
+                  </a>
+                </li>
+                <li class="contact__social-item">
+                  <a class="contact__social-link" href="https://www.instagram.com/">
+                    <img class="contact__social-icon" src="images/instagram.svg" alt="instagram icon">
+                  </a>
+                </li>
+                <li class="contact__social-item">
+                  <a class="contact__social-link" href="https://www.pinterest.com/">
+                    <img class="contact__social-icon" src="images/pinterest.svg" alt="pinterest icon">
+                  </a>
+                </li>
+                <li class="contact__social-item">
+                  <a class="contact__social-link" href="https://www.whatsapp.com/">
+                    <img class="contact__social-icon" src="images/whatsapp.svg" alt="whatsapp icon">
+                  </a>
+                </li>
+                <li class="contact__social-item">
+                  <a class="contact__social-link" href="https://www.youtube.com/">
+                    <img class="contact__social-icon" src="images/youtube.svg" alt="youtube icon">
+                  </a>
+                </li>
+              </ul>
+
+              <p class="contact__text">
+                Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock
+              </p>
+
+              <a class="contact__phone" href="tel:4158297934">(415) 829-7934</a>
+              <p class="contact__street">725 Green St</p>
+              <p class="contact__city">San Francisco, California(CA), 94133</p>
+
+              <a class="contact__info-email info-email" href="mailto:ouremailaddress@email.com">
+                ouremailaddress@email.com
+              </a>
+
+              <form class="contact__form">
+                <input class="contact__form-input" type="text" placeholder="Your name">
+                <input class="contact__form-input" type="email" placeholder="Your e-mail">
+                <textarea class="contact__form-area" placeholder="Your message"></textarea>
+                <button class="contact__form-btn">Send</button>
+              </form>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
@@ -106,7 +163,7 @@
                   schlitz you probably occupy
                 </p>
                 <a
-                  class="footer__info-email"
+                  class="footer__info-email info-email"
                   href="mailto:ouremailaddress@email.com"
                 >
                   ouremailaddress@email.com
