--- a/app/index.html
+++ b/app/index.html
@@ -347,7 +347,7 @@
                   schlitz you probably occupy
                 </p>
                 <a
-                  class="footer__info-email"
+                  class="footer__info-email info-email"
                   href="mailto:ouremailaddress@email.com"
                 >
                   ouremailaddress@email.com
