--- a/app/contact.html
+++ b/app/contact.html
@@ -84,10 +84,7 @@
         <div class="map">
           <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25221.356946610795!2d-122.44013576131898!3d37.79778171860772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580e839d7e541%3A0xf89b6220c55337a7!2sGreen%20St%2C%20San%20Francisco%2C%20CA%2C%20USA!5e0!3m2!1sen!2sua!4v1641034097325!5m2!1sen!2sua" 
-            width="100%" 
-            height="577" 
             style="border:0;" 
-            zoom="10"
             allowfullscreen="" 
             loading="lazy"
           ></iframe>
@@ -149,6 +146,133 @@
             </div>
           </div>
         </section>
+
+        <div class="contact-slider">
+          <div class="container-fluid">
+            <div class="contact__slider">
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/01.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/02.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/03.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/04.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/05.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/06.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/07.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/08.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/09.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/10.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/01.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/02.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/03.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/04.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/05.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/06.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/07.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/08.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/09.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+              <a class="contact-slider__link" href="gallery.html">
+                <img class="contact-slider__img" src="images/slider/10.jpg" alt="images">
+                <h6 class="contact-slider__title">
+                  Truffaut literally trust
+                </h6>
+              </a>
+            </div>
+          </div>
+        </div>
 
       </main>
 
