Added aside block to blog.html

--- a/app/blog.html
+++ b/app/blog.html
@@ -81,6 +81,124 @@
           </div>
         </div>
 
+        <div class="blog">
+          <div class="container">
+            <div class="blog__inner">
+
+              <div class="blog__content">
+
+              </div>
+
+              <aside class="aside">
+                <form class="aside__search">
+                  <input class="aside__search-input" type="text" placeholder="Search">
+                  <button class="aside__search-btn" type="submit">
+                    <img src="images/search-icon.svg" alt="">
+                  </button>
+                </form>
+
+                <div class="blog-category">
+                  <h6 class="blog-category__title">
+                    Categories
+                  </h6>
+                  <ul class="blog-category__list">
+                    <li class="blog-category__item">
+                      <a class="blog-category__link" href="blog.html">Dining room (1)</a>
+                    </li>
+                    <li class="blog-category__item">
+                      <a class="blog-category__link" href="blog.html">Office furniture (12)</a>
+                    </li>
+                    <li class="blog-category__item">
+                      <a class="blog-category__link" href="blog.html">Simple interiror design (2)</a>
+                    </li>
+                    <li class="blog-category__item">
+                      <a class="blog-category__link" href="blog.html">Design (4)</a>
+                    </li>
+                    <li class="blog-category__item">
+                      <a class="blog-category__link" href="blog.html">Bedroom Furniture (1)</a>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="recent-posts">
+                  <h6 class="recent-posts__title">
+                    Recent Posts
+                  </h6>
+                  <ul class="recent-posts__list">
+                    <li class="recent-posts__item">
+                      <a class="recent-posts__item-title" href="#">
+                        Cred selfies edison bulb four dollar toast humblebrag
+                      </a>
+                      <span class="recent-posts__item-date">August 10, 2020</span>
+                      <a class="recent-posts__item-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                    <li class="recent-posts__item">
+                      <a class="recent-posts__item-title" href="#">
+                        Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth
+                      </a>
+                      <span class="recent-posts__item-date">September 30, 2020</span>
+                      <a class="recent-posts__item-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                    <li class="recent-posts__item">
+                      <a class="recent-posts__item-title" href="#">
+                        Cred selfies edison bulb four dollar toast humblebrag
+                      </a>
+                      <span class="recent-posts__item-date">May 2, 2020</span>
+                      <a class="recent-posts__item-author" href="#">
+                        by Ann Summers
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="blog__tags">
+                  <h6 class="blog__tags-title">Tags</h6>
+
+                  <a class="blog__tags-link" href="#">Dining room futniture</a>
+                  <a class="blog__tags-link" href="#">Chair</a>
+                  <a class="blog__tags-link" href="#">Table</a>
+                  <a class="blog__tags-link" href="#">Bedroom</a>
+                  <a class="blog__tags-link" href="#">Office Furniture</a>
+                </div>
+
+                <ul class="blog__social">
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="https://www.facebook.com/">
+                      <img class="blog__social-icon" src="images/facebook.svg" alt="facebook icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="https://www.instagram.com/">
+                      <img class="blog__social-icon" src="images/instagram.svg" alt="instagram icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="https://www.pinterest.com/">
+                      <img class="blog__social-icon" src="images/pinterest.svg" alt="pinterest icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="https://www.whatsapp.com/">
+                      <img class="blog__social-icon" src="images/whatsapp.svg" alt="whatsapp icon">
+                    </a>
+                  </li>
+                  <li class="blog__social-item">
+                    <a class="blog__social-link" href="https://www.youtube.com/">
+                      <img class="blog__social-icon" src="images/youtube.svg" alt="youtube icon">
+                    </a>
+                  </li>
+                </ul>
+
+              </aside>
+
+            </div>
+          </div>
+        </div>
+
       </main>
 
       <footer class="footer">
