Added blog__items, blog__blockquote and pagination blocks to blog.html, new font, styles, scripts and images

--- a/app/blog.html
+++ b/app/blog.html
@@ -85,7 +85,106 @@
           <div class="container">
             <div class="blog__inner">
 
-              <div class="blog__content">
+              <div class="blog__items">
+
+                <div class="blog__item">
+                  <a href="blog-post.html">
+                    <img class="blog__item-img" src="images/blog/big-01.jpg" alt="images">
+                  </a>
+                  <div class="blog__item-info">
+                    <span class="blog__item-date">August 15, 2020</span> | 
+                    <a class="blog__item-author" href="#">by Ann Summers</a> | 
+                    <a class="blog__item-theme" href="#">Bedroom Furniture</a>
+                  </div>
+                  <a href="blog-post.html">
+                    <h3 class="blog__item-title">
+                      Red selfies edison bulb four dollar toast humblebrag for the furniture
+                    </h3>
+                  </a>
+                  <p class="blog__item-text">
+                    Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. 
+                    Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. 
+                    Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats 
+                    coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table
+                  </p>
+                </div>
+
+                <blockquote class="blog__blockquote">
+                  “Simplicity is not the goal. It is the by-product of a good idea and modest expectations” 
+                  <h5 class="blog__blockquote-author">
+                    Paul Rand
+                  </h5>
+                </blockquote>
+
+                <div class="blog__item">
+                  <a href="blog-post.html">
+                    <div class="blog__item-popup">
+                      <img class="blog__item-img" src="images/blog/big-02.jpg" alt="images">
+                      <a class="blog__item-popup-btn" data-fancybox href="https://youtu.be/dQw4w9WgXcQ">
+                        <img src="images/play_button.svg" alt="play button">
+                      </a>
+                    </div>
+                  </a>
+                  <div class="blog__item-info">
+                    <span class="blog__item-date">August 12, 2020</span> | 
+                    <a class="blog__item-author" href="#">by Lux Morningstar</a> | 
+                    <a class="blog__item-theme" href="#">Design</a> 
+                  </div>
+                  <a href="blog-post.html">
+                    <h3 class="blog__item-title">
+                      Authentic kogi shabby chic
+                    </h3>
+                  </a>
+                </div>
+
+                <div class="blog__item">
+                  <div class="blog__item-slider">
+                    <a href="blog-post.html">
+                      <img class="blog__item-img" src="images/blog/big-03.jpg" alt="images">
+                    </a>
+                    <a href="blog-post.html">
+                      <img class="blog__item-img" src="images/blog/big-02.jpg" alt="images">
+                    </a>
+                    <a href="blog-post.html">
+                      <img class="blog__item-img" src="images/blog/big-01.jpg" alt="images">
+                    </a>
+                  </div>
+
+                  <div class="blog__item-info">
+                    <span class="blog__item-date">August 18, 2020</span> | 
+                    <a class="blog__item-author" href="#">by Ann Summers</a> | 
+                    <a class="blog__item-theme" href="#">Table Furniture</a>
+                  </div>
+                  <a href="blog-post.html">                  
+                    <h3 class="blog__item-title">
+                      Semiotics fixie four dollar toast, next level woke
+                    </h3>
+                  </a>
+                   
+                  <p class="blog__item-text">
+                    Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. 
+                    Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. 
+                    Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats 
+                    coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table
+                  </p>
+                </div>
+
+                <div class="pagination">
+                  <a class="pagination__arrow pagination__arrow--disabled" href="blog.html">
+                    <img src="images/pagination-arrow-prev.svg" alt="prev arrow">
+                  </a>
+                  <ul class="pagination__list">
+                    <li class="pagination__item">
+                      <a class="pagination__num pagination__num--active" href="blog.html">1</a>
+                    </li>
+                    <li class="pagination__item">
+                      <a class="pagination__num" href="blog.html">2</a>
+                    </li>
+                  </ul>
+                  <a class="pagination__arrow" href="blog.html">
+                    <img src="images/pagination-arrow-next.svg" alt="next arrow">
+                  </a>
+                </div>
 
               </div>
 
