Added content, tags, links, comments and form blocks to blog-post.html

--- a/app/blog-post.html
+++ b/app/blog-post.html
@@ -86,10 +86,10 @@
 
         <div class="blog">
           <div class="container">
-            <div class="blog__inner">
+            <div class="blog__inner blog-one">
 
               <div class="blog__items">
-                <div class="blog__item">
+                <div class="blog__item blog-one__item">
                   <a href="blog-post.html">
                     <img class="blog__item-img" src="images/blog/big-01.jpg" alt="images">
                   </a>
@@ -103,13 +103,131 @@
                       Red selfies edison bulb four dollar toast humblebrag for the furniture
                     </h3>
                   </a>
-                  <p class="blog__item-text">
-                    Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. 
-                    Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. 
-                    Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard thundercats 
-                    coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel pin edison bulb farm-to-table
-                  </p>
+                  <div class="blog-one__content">
+                    <p>
+                      Everyday carry actually neutra authentic kogi shabby chic migas small batch craft beer. 
+                      Literally williamsburg tote bag farm-to-table mustache ugh deep v irony. 
+                      Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo 
+                      godard thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst 
+                      enamel pin edison bulb farm-to-table.
+                    </p>
+                    <p>
+                      Yuccie portland kickstarter, readymade ramps humblebrag ennui banjo mumblecore 
+                      vaporware pickled cray stumptown 8-bit mlkshk. Tumeric tousled austin, 
+                      kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO 
+                      lomo bushwick coloring book. Semiotics man bun venmo viral cliche. 
+                      Tousled yr williamsburg austin edison bulb cloud bread vegan street art. 
+                      Locavore food truck trust fund palo santo asymmetrical, franzen deep v marfa 
+                      kogi whatever swag pop-up seitan.
+                    </p>
+                    <blockquote>
+                      “Simplicity is not the goal. It is the by-product of a good idea and modest expectations” 
+                      <h5>
+                        Paul Rand
+                      </h5>
+                    </blockquote>
+                    <p>
+                      Af man bun copper mug iPhone enamel pin pug selvage hammock palo santo godard 
+                      thundercats coloring book yuccie woke. Ugh pok pok taxidermy pabst enamel 
+                      pin edison bulb farm-to-table.
+                    </p>
+                    <p>
+                      Yuccie portland kickstarter, readymade ramps humblebrag ennui banjo mumblecore 
+                      vaporware pickled cray stumptown 8-bit mlkshk. Tumeric tousled austin, kinfolk 
+                      scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick 
+                      coloring book. Semiotics man bun venmo viral cliche. Tousled yr williamsburg 
+                      austin edison bulb cloud bread vegan street art. Locavore food truck trust 
+                      fund palo santo asymmetrical, franzen deep v marfa kogi whatever swag pop-up 
+                      seitan.
+                    </p>
+                  </div>
+                  <div class="blog__tags blog-one__tags">
+                    <h6 class="blog__tags-title">Tags</h6>
+  
+                    <a class="blog__tags-link" href="blog.html">Bedroom furniture</a>
+                    <a class="blog__tags-link" href="blog.html">Office furniture</a>
+                    <a class="blog__tags-link" href="blog.html">Dining room futniture</a>
+                    <a class="blog__tags-link" href="blog.html">Chair</a>
+                  </div>
                 </div>
+                <div class="blog-one__links">
+                  <a class="blog-one__link" href="blog-post.html">
+                    <img class="blog-one__link-arrow" src="images/pagination-arrow-prev.svg" alt="prev arrow">
+                    <span class="blog-one__link-text">
+                      Cred selfies edison bulb four dollar toast humblebrag
+                    </span>
+                  </a>
+                  <a class="blog-one__link" href="blog-post.html">
+                    <span class="blog-one__link-text">
+                      Semiotics fixie four dollar toast, next level
+                    </span>
+                    <img class="blog-one__link-arrow" src="images/pagination-arrow-next.svg" alt="next arrow">
+                  </a>
+                </div>
+                <div class="blog-one__comments">
+                  <h3 class="blog-one__comments-title">
+                    Comments:
+                  </h3>
+                  <ul class="blog-one__comments-list">
+                    <li class="blog-one__comments-item">
+                      <img class="blog-one__comments-avatar" src="images/content/avatar.png" alt="Lea Brown">
+                      <div class="blog-one__comments-info">
+                        <h5 class="blog-one__comments-name">Lea Brown</h5>
+                        <p class="blog-one__comments-date">August 12, 2020</p>
+                        <p class="blog-one__comments-text">
+                          Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                        </p>
+                        <div class="blog-one__comments-buttons">
+                          <button class="blog-one__comments-report">Report</button>
+                          <button class="blog-one__comments-reply">Reply</button>
+                        </div>
+                      </div>
+                    </li>
+                    <ul class="blog-one__comments-list">
+                      <li class="blog-one__comments-item">
+                        <img class="blog-one__comments-avatar" src="images/content/avatar.png" alt="Lea Brown">
+                        <div class="blog-one__comments-info">
+                          <h5 class="blog-one__comments-name">Lea Brown</h5>
+                          <p class="blog-one__comments-date">August 12, 2020</p>
+                          <p class="blog-one__comments-text">
+                            Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                          </p>
+                          <div class="blog-one__comments-buttons">
+                            <button class="blog-one__comments-report">Report</button>
+                            <button class="blog-one__comments-reply">Reply</button>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                    <li class="blog-one__comments-item">
+                      <img class="blog-one__comments-avatar" src="images/content/avatar.png" alt="Lea Brown">
+                      <div class="blog-one__comments-info">
+                        <h5 class="blog-one__comments-name">Lea Brown</h5>
+                        <p class="blog-one__comments-date">August 12, 2020</p>
+                        <p class="blog-one__comments-text">
+                          Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                        </p>
+                        <div class="blog-one__comments-buttons">
+                          <button class="blog-one__comments-report">Report</button>
+                          <button class="blog-one__comments-reply">Reply</button>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <form class="blog-one__form">
+                  <h3 class="blog-one__form-title">
+                    Post a Comment
+                  </h3>
+                  <textarea class="blog-one__form-area" placeholder="Your comment"></textarea>
+                  <input class="blog-one__form-input" type="text" placeholder="Your name">
+                  <input class="blog-one__form-input" type="email" placeholder="Your e-mail">
+                  <label class="blog-one__form-checkbox">
+                    <input type="checkbox">
+                    <span>Remember me</span>
+                  </label>
+                  <button class="blog-one__form-btn" type="submit">Submit</button>
+                </form>
               </div>
 
               <aside class="aside">
