Adapted the .blog-box section in index.html for mobile devices

--- a/app/index.html
+++ b/app/index.html
@@ -312,7 +312,7 @@
                     <a class="blog-box__author" href="blog-post.html">by Ann Summers</a> | 
                     <a class="blog-box__theme" href="blog-post.html">Inrerior</a>
                   </div>
-                  <a class="blog-box__item-link" href="blog-post.html">
+                  <a href="blog-post.html">
                     <h4 class="blog-box__item-title">
                       Listicle actually selvage activated charcoal for the drinking vinegar
                     </h4>
