Adapted the .blog-one section in blog-post.html for mobile devices

--- a/app/blog-post.html
+++ b/app/blog-post.html
@@ -187,6 +187,20 @@
                         </div>
                       </div>
                     </li>
+                    <li class="blog-one__comments-item">
+                      <img class="blog-one__comments-avatar" src="images/content/avatar.png" alt="Lea Brown">
+                      <div class="blog-one__comments-info">
+                        <h5 class="blog-one__comments-name">Lea Brown</h5>
+                        <p class="blog-one__comments-date">August 12, 2020</p>
+                        <p class="blog-one__comments-text">
+                          Tumeric tousled austin, kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
+                        </p>
+                        <div class="blog-one__comments-buttons">
+                          <button class="blog-one__comments-report">Report</button>
+                          <button class="blog-one__comments-reply">Reply</button>
+                        </div>
+                      </div>
+                    </li>
                     <ul class="blog-one__comments-list">
                       <li class="blog-one__comments-item">
                         <img class="blog-one__comments-avatar" src="images/content/avatar.png" alt="Lea Brown">
